# adventofcode

./: .gitmodules
2017/: CMakeLists.txt
2017/01/: CMakeLists.txt  aoc1.cpp
2017/01/part1/: CMakeLists.txt  aoc1p1.cpp
2017/01/part2/: CMakeLists.txt  aoc1p2.cpp
2017/02/: CMakeLists.txt  aoc2.cpp
2017/02/part1/: aoc2p1.xlsx
2017/02/part2/: CMakeLists.txt
